! Fix layout issue for local playlist in some widths

--- a/src/renderer/components/PlaylistInfo/PlaylistInfo.scss
+++ b/src/renderer/components/PlaylistInfo/PlaylistInfo.scss
@@ -111,7 +111,6 @@
   .playlistDescription {
     overflow-x: hidden;
     text-align: center;
-    white-space: nowrap;
     text-overflow: ellipsis;
     max-inline-size: 750px;
     inline-size: 100%;
